# CSC1109-Data-Speed-and-Scale

./: .env  .gitignore  .mailmap  .readthedocs.yaml  .scalafmt.conf  LICENSE  README.md  VERSION  csc1109.md  devenv.nix  justfile  mkdocs.yml  pyproject.toml  readme.md  sandbox_status.md  todo.md
.github/workflows/: build-base.yml  build.yml  build_dispatcher.yml  hadoop_build.yml  push_docs.yml  test_docs.yml  win_debug.yml
containers/base/: Dockerfile  VERSION  entrypoint.py  entrypoint.service  entrypoint.sh  justfile
containers/base/lab/: lab.md
containers/base/root/: .bashrc  .blerc  .vimrc  .zshrc  CSC1109.md  CSS1109.md  Dockerfile  VERSION  build.sh
containers/base/test/: system_hash.sh  test.sh
containers/bonus3/: Dockerfile  VERSION
containers/bonus3/lab/: lab.md
containers/dind/: Dockerfile  VERSION  containers.conf
containers/dind-minimal/: Dockerfile  VERSION  containers.conf  entrypoint.sh  storage.conf  test.sh
containers/lab1/: Dockerfile  VERSION
containers/lab1/client/: Dockerfile
containers/lab1/lab/: .env  docker-compose.yaml  hadoop.env  lab.md  pyproject.toml
containers/lab2/: Dockerfile  VERSION
containers/lab2/client/: Dockerfile
containers/lab2/lab/: docker-compose.yaml  hive_init.sh  lab.md
containers/lab3/: Dockerfile  VERSION
containers/lab3/client/: Dockerfile  VERSION
containers/lab3/lab/: docker-compose.yaml  lab.md
containers/lab4/: Dockerfile  VERSION
containers/lab4/client/: Dockerfile  VERSION
containers/lab4/lab/: docker-compose.yaml  lab.md  pom.xml
containers/lab5/: Dockerfile  VERSION
containers/lab5/client/: Dockerfile  VERSION  spark-defaults.conf
containers/lab5/lab/: docker-compose.yaml  pom.xml
containers/lab6/: Dockerfile  VERSION  entrypoint.sh
containers/lab6/client/: 10set-classpath.sh  Dockerfile  VERSION  (+2 more)
containers/sandbox/: Dockerfile  VERSION  deploy-stack.service
docs/: bonus1.md  bonus2.md  dictionary.txt  index.md  sandbox.md
docs/bonus3/: index.md
docs/includes/: abbreviations.md
docs/lab1/: index.md  topology.mmd
docs/lab2/: index.md  topology.mmd
docs/lab3/: index.md
docs/lab4/: dag.mmd  index.md  topology.mmd
docs/lab5/: index.md  rdd.mmd  topology.mmd
docs/lab6/: index.md
utils/: test_code_blocks.py  version.py
(+143 files in other folders)
