[project]
name = "csc1109-data-speed-and-scale"
version = "2025.06.23.1"
description = "Course materials for DCU's CSC1109 computer science labs."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
    "markdown-callouts>=0.4.0",
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.2",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "mkdocs-htmlproofer-plugin>=1.3.0",
    "mkdocs-macros-plugin>=1.3.7",
    "mkdocs-material>=9.6.14",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-section-index>=0.3.10",
    "mkdocs-spellcheck[all]>=1.1.1",
    "pymdown-extensions>=10.16",
    "tomlkit>=0.13.3",
]
