[project]
name = "csc1109-data-speed-and-scale"
version = "2025.11.18.9"
description = "Course materials for DCU's CSC1109 computer science labs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.1.0",
    "loguru>=0.7.3",
    "markdown-callouts>=0.4.0",
    "mdformat>=0.7.22",
    "mdformat-pyproject>=0.0.2",
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.2",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "mkdocs-htmlproofer-plugin>=1.3.0",
    "mkdocs-macros-plugin>=1.3.7",
    "mkdocs-material>=9.6.14",
    "mkdocs-mermaid2-plugin>=1.2.1",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-panzoom-plugin>=0.3.0",
    "mkdocs-section-index>=0.3.10",
    "mkdocs-spellcheck[all]>=1.1.1",
    "pymarkdownlnt>=0.9.30",
    "pymdown-extensions>=10.16",
    "tomlkit>=0.13.3",
    "zizmor>=1.11.0",
]

[tool.pymarkdown]
extensions.front-matter.enabled = true
plugins.front-matter.front_matter_title = "title"
plugins.md003.enabled = true
plugins.md003.style = "atx_closed"
plugins.md007.enabled = true
plugins.md009.enabled = true
plugins.md010.enabled = true
plugins.md013.enabled = true
plugins.md013.line_length = 100
plugins.md013.code_blocks = false
plugins.md025.enabled = true
plugins.md041.enabled = true
plugins.md046.enabled = true
plugins.md046.style = "backtick"

[tool.mdformat]
wrap = 100
number = false
end_of_line = "lf"

[tool.ruff]
line-length = 100
target-version = "py313"
